--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,9 @@
 
 url: http://JakeGinnivan.github.io
 title: Jake Ginnivan's blog
-subtitle: Things I find useful
+subtitle: 
 author: Jake Ginnivan
 simple_search: http://google.com/search
-description: |
-  I'm Jake, an Open Source Enthusiast, Blogger, Speaker and Microsoft MVP (VSTO) based in London at the moment and from Perth, Australia originally.
-  Currently working for http://weareadaptive.com
-  
-  Unless specified all code on this blog is released under MIT License.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -20,7 +15,7 @@ description: |
 date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: /atom.xml
+subscribe_rss: /feed
 subscribe_email:
 # RSS feeds can list your email address if you like
 email: jake@ginnivan.net
@@ -54,7 +49,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [custom/asides/tag_cloud.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/recent_posts.html, asides/github.html, custom/asides/category_list.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -68,9 +63,9 @@ default_asides: [custom/asides/tag_cloud.html, asides/recent_posts.html, asides/
 
 # Github repositories
 github_user: JakeGinnivan
-github_repo_count: 0
+github_repo_count: 6
 github_show_profile_link: true
-github_skip_forks: true
+github_skip_forks: false
 
 # Twitter
 twitter_user: JakeGinnivan
