--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://JakeGinnivan.github.io
+url: http://jake.ginnivan.net
 title: Jake Ginnivan's blog
 subtitle: 
 author: Jake Ginnivan
