--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ titlecase: true       # Converts page and post titles to titlecase
 # ----------------------- #
 prose:
   rooturl: "source"
+  site: "http://jake.ginnivan.net"
+  media: "assets/posts"
   metadata:
     "source/_posts":
       - name: "layout"
